fix: fix malformed icon and button overflow responsiveness issues

--- a/src/components/ActionTile/ActionTile.module.scss
+++ b/src/components/ActionTile/ActionTile.module.scss
@@ -1,7 +1,21 @@
 @use '@assets/global.scss' as g;
 
+@mixin responsiveness {
+  @include g.md-breakpoint {
+    height: 160px;
+    padding: 10px 20px;
+    gap: 10px;
+  }
+
+  @include g.lg-breakpoint {
+    height: 160px;
+    padding: 10px 20px;
+    gap: 10px;
+  }
+}
+
 @mixin icons($background-color) {
-  width: 50px;
+  min-width: 50px;
   height: 50px;
   border-radius: 50%;
   display: flex;
@@ -36,11 +50,7 @@
     padding-left: 20px;
   }
 
-  @include g.md-breakpoint {
-    height: 160px;
-    padding: 10px 20px;
-    gap: 10px;
-  }
+  @include responsiveness;
 }
 
 .grey {
